Modified to include the Hub SMS in bsim build for Dimo environment.

--- a/Core/settings/bsim/mce.properties
+++ b/Core/settings/bsim/mce.properties
@@ -128,3 +128,12 @@ hsm.thales.encrypted.component2=UAF7AE769745CB4974A8726AE7426381D
 hsm.thales.encrypted.component3=U836EF0D0F3F6B37004BA371E4D43755A
 hsm.thales.keytype=000
 hsm.thales.keyschemelmk=U
+#
+#SMS HTTP URL
+#
+sms.http.url=http://10.16.105.30/UAT/SMSProxyChargedTest.php
+sms.shortCode=6288808558888
+sms.apiToken=5e0491add86814c6e586b600093473e35e043fb5
+sms.partnerID=
+sms.walletID=UANG
+sms.intPrefixCode=01033
