SMP-17: Need to integrate PPOB ISO Spec in Simaspay for Bank transactions

--- a/BSIM/pom.xml
+++ b/BSIM/pom.xml
@@ -30,6 +30,7 @@
 		<module>NewBSIMSMS</module>
 		<module>BSIMBillPayment</module>
 		<module>FlashizISO8583</module>
+		<module>BSMPPOBISO8583</module>
     </modules>	
 	
 	<dependencies>
