--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -81,3 +81,5 @@ email.recipient.list=test@test.com
 dateFormatInReportFileNames=yyyyMMdd
 #use yyyy-MM-dd for Mysql and use dd-MMM-yy hh:mm:ss.SSS aaa for Oracle database
 dateFormatInReportQuery=dd-MMM-yy hh:mm:ss.SSS aaa
+mfino.ktpserver.base.url=https://localhost:8443/KTPMock/validate
+mfino.ktpserver.server.timeout=10000
