--- a/Web/webapi/pom.xml
+++ b/Web/webapi/pom.xml
@@ -173,7 +173,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
 				<configuration>
-				<packagingExcludes>**/*.jsp</packagingExcludes>
+				<!-- <packagingExcludes>**/*.jsp</packagingExcludes> -->
 					<archive>
 						<manifestEntries>
 							<release>${release}</release>
