--- a/Web/webapi/pom.xml
+++ b/Web/webapi/pom.xml
@@ -121,6 +121,10 @@
 										<include>RSApubExp.dat</include>
 										<include>RSAq.dat</include>
 										<include>RSAqInv.dat</include>
+										<include>category.district.txt</include>
+										<include>category.province.txt</include>
+										<include>category.region.txt</include>
+										<include>category.village.txt</include>
 									</includes>
 									<filtering>true</filtering>
 								</resource>
