--- a/Core/settings/bsim/bc2qmap.cfg
+++ b/Core/settings/bsim/bc2qmap.cfg
@@ -1,3 +1,3 @@
 153=jms:bsimISOQueue?disableReplyTo=true
 881=jms:bsimISOQueue?disableReplyTo=true
-9999=jms:bsmppobISOQueue?disableReplyTo=true
+9999=jms:bsimISOQueue?disableReplyTo=true
