Modification for quartz.properties.

--- a/Core/settings/bsim/quartz.properties
+++ b/Core/settings/bsim/quartz.properties
@@ -32,9 +32,9 @@ org.quartz.jobStore.isClustered: false
 # Configure Datasources  
 #============================================================================
 
-org.quartz.dataSource.myDS.driver: com.mysql.jdbc.Driver
-org.quartz.dataSource.myDS.URL: jdbc:mysql://mfinodbserver:3306/uangku_prod_16jul2014
-org.quartz.dataSource.myDS.user: mfino
-org.quartz.dataSource.myDS.password: mFino260
+org.quartz.dataSource.myDS.driver: oracle.jdbc.OracleDriver
+org.quartz.dataSource.myDS.URL: jdbc:oracle:thin:@mfinodbserver:1521/xe
+org.quartz.dataSource.myDS.user: SIMASPAY0316
+org.quartz.dataSource.myDS.password: SIMASPAY0316
 org.quartz.dataSource.myDS.maxConnections: 10
 org.quartz.dataSource.myDS.validationQuery: SELECT 1 FROM DUAL
