Modifications for SMP-148; Zenziva SMS Integration.

--- a/Core/settings/bsim/mce.properties
+++ b/Core/settings/bsim/mce.properties
@@ -137,3 +137,12 @@ sms.apiToken=5e0491add86814c6e586b600093473e35e043fb5
 sms.partnerID=
 sms.walletID=UANG
 sms.intPrefixCode=01033
+
+
+#Zenziva SMS Properties
+
+zenziva.sms.http.url=https://alpha.zenziva.net/apps/smsapi.php
+zenziva.sms.userkey=2pki08
+zenziva.sms.passkey=dimomantabsepanjangmasa
+
+#
