--- a/Hub/pom.xml
+++ b/Hub/pom.xml
@@ -31,6 +31,7 @@
 		<module>FlashizBillPayment</module>
 		<module>HubSMS</module>
 		<module>UangkuInterBank</module>
+		<module>ZenzivaSMS</module>
 		<!--<module>XMLRPCDefinitions</module>-->
     </modules>	
 	
