Reverting the files for not allowing the Zenziva API into Production.

--- a/Hub/pom.xml
+++ b/Hub/pom.xml
@@ -31,7 +31,7 @@
 		<module>FlashizBillPayment</module>
 		<module>HubSMS</module>
 		<module>UangkuInterBank</module>
-		<module>ZenzivaSMS</module>
+		<!-- <module>ZenzivaSMS</module> -->
 		<!--<module>XMLRPCDefinitions</module>-->
     </modules>	
 	
