--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -83,3 +83,5 @@ dateFormatInReportFileNames=yyyyMMdd
 dateFormatInReportQuery=dd-MMM-yy hh:mm:ss.SSS aaa
 mfino.ktpserver.base.url=https://localhost:8443/KTPMock/validate
 mfino.ktpserver.server.timeout=10000
+#Use "," to seperate multiple email Ids
+mfino.capitalization.authorized.email=bala.sunku@rand-ind.com
