SMP-356: [SMS Gateway] Change Request Method to HTTP POST

--- a/Core/settings/bsim/mce.properties
+++ b/Core/settings/bsim/mce.properties
@@ -146,3 +146,11 @@ zenziva.sms.userkey=2pki08
 zenziva.sms.passkey=dimomantabsepanjangmasa
 
 #
+
+#Simaspay SMS Properties
+
+simaspay.sms.http.url=https://alpha.zenziva.net/apps/smsapi.php
+simaspay.sms.systemId=SIMASPAY
+simaspay.sms.msgId=123456
+
+#
