Modification for SMSGW URL.

--- a/Core/settings/bsim/mce.properties
+++ b/Core/settings/bsim/mce.properties
@@ -149,7 +149,7 @@ zenziva.sms.passkey=dimomantabsepanjangmasa
 
 #Simaspay SMS Properties
 
-simaspay.sms.http.url=https://alpha.zenziva.net/apps/smsapi.php
+simaspay.sms.http.url=http://uat.banksinarmas.com/SmsAlert/app/sendSmsPost
 simaspay.sms.systemId=SIMASPAY
 simaspay.sms.msgId=123456
 
