add new parameters for database configuration

--- a/Core/settings/bsim/database_config.properties
+++ b/Core/settings/bsim/database_config.properties
@@ -20,3 +20,8 @@ mfino.hibernateStringEncryptor.password=ENC(B9Hekm3iRdP8gIqRCModrw==)
 mfino.hibernateUniqueStringEncryptor.password=ENC(B9Hekm3iRdP8gIqRCModrw==)
 mfino.saltGenerator.salt=ENC(qNCUBaQqCbA+1zbzphCkFZoMaGl2R+ip)
 mfino.hibernate.queryTranslator=org.hibernate.hql.classic.ClassicQueryTranslatorFactory
+mfino.dbcp.timeBetweenEvictionRunsMillis=150000
+mfino.dbcp.testWhileIdle=true
+mfino.dbcp.minEvictableIdleTimeMillis=180000
+mfino.dbcp.maxWait=300000
+mfino.dbcp.numTestsPerEvictionRun=10
