Adding the jasypt configuration in backed xmls

--- a/Core/settings/bsim/database_config.properties
+++ b/Core/settings/bsim/database_config.properties
@@ -20,3 +20,10 @@ mfino.hibernateStringEncryptor.password=ENC(B9Hekm3iRdP8gIqRCModrw==)
 mfino.hibernateUniqueStringEncryptor.password=ENC(B9Hekm3iRdP8gIqRCModrw==)
 mfino.saltGenerator.salt=ENC(qNCUBaQqCbA+1zbzphCkFZoMaGl2R+ip)
 mfino.hibernate.queryTranslator=org.hibernate.hql.classic.ClassicQueryTranslatorFactory
+
+jms.brokerURL.host=localhost
+jms.brokerURL.port=61616
+jms.userName=system
+jms.password=manager
+jms.maxConnections=8
+concurrentConsumers=2
