--- a/Core/settings/bsim/mce.properties
+++ b/Core/settings/bsim/mce.properties
@@ -153,4 +153,7 @@ simaspay.sms.http.url=http://uat.banksinarmas.com/SmsAlert/app/sendSmsPost
 simaspay.sms.systemId=SIMASPAY
 simaspay.sms.msgId=123456
 
-#
+#Hibernate String Encryptor
+mfino.hibernateStringEncryptor.password=ENC(B9Hekm3iRdP8gIqRCModrw==)
+mfino.hibernateUniqueStringEncryptor.password=ENC(B9Hekm3iRdP8gIqRCModrw==)
+mfino.saltGenerator.salt=ENC(qNCUBaQqCbA+1zbzphCkFZoMaGl2R+ip)
