--- a/Web/AdminApplication/pom.xml
+++ b/Web/AdminApplication/pom.xml
@@ -26,11 +26,16 @@
 			<groupId>com.mfino.commons</groupId>
 			<artifactId>UICore</artifactId>
 			<version>${project.version}</version>
-		</dependency>		
+		</dependency>	
+		<dependency>
+		    <groupId>org.jasypt</groupId>
+		    <artifactId>jasypt-spring31</artifactId>
+		    <version>1.9.0</version>
+		</dependency>
 		<dependency>
 		    <groupId>org.jasypt</groupId>
 		    <artifactId>jasypt</artifactId>
-		    <version>1.8</version>
+		    <version>1.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -76,7 +81,7 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.5.8</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>3.3.2.GA</version>
@@ -85,46 +90,68 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-c3p0</artifactId>
 			<version>3.3.2.GA</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.2.12.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.2.12.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.2.12.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.1.4.RELEASE</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>3.2.12.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>3.2.12.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>3.2.12.RELEASE</version>
+		</dependency>
+		 <dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>spring-expression</artifactId>
+        	<version>3.2.12.RELEASE</version>
+    	</dependency>
+		
 		<dependency>
       		<groupId>org.springframework.security</groupId>
       		<artifactId>spring-security-web</artifactId>
-      		<version>3.0.5.RELEASE</version>
+      		<version>3.1.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.1.4.RELEASE</version>
 		</dependency>			
 		<dependency>
 			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core-tiger</artifactId>
-			<version>2.0.7.RELEASE</version>
+			<artifactId>spring-security-core</artifactId>
+			<version>3.1.4.RELEASE</version>
 		</dependency>
 	    <dependency>
 	      	<groupId>org.springframework.security</groupId>
 	      	<artifactId>spring-security-taglibs</artifactId>
-	      	<version>3.0.5.RELEASE</version>
+	      	<version>3.1.4.RELEASE</version>
 	    </dependency>		
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -203,11 +230,11 @@
 			<artifactId>poi</artifactId>
 			<version>3.8</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.11.0.GA</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
