--- a/Hub/BayarBillPayments/pom.xml
+++ b/Hub/BayarBillPayments/pom.xml
@@ -55,17 +55,17 @@
 		<dependency>
 	      	<groupId>org.springframework</groupId>
 	      	<artifactId>spring-aop</artifactId>
-	      	<version>3.0.5.RELEASE</version>
+	      	<version>3.2.12.RELEASE</version>
       </dependency>
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
-		<version>3.3.2.GA</version>
+		<version>4.2.19.Final</version>
 	</dependency>
 	<dependency>
 		  <groupId>org.springframework</groupId>
 		  <artifactId>spring-tx</artifactId>
-		  <version>3.0.5.RELEASE</version>
+		  <version>3.2.12.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mfino.application</groupId>
@@ -103,7 +103,7 @@
                             org.apache.camel.component.jms,
               				org.osgi.framework,
               				org.springframework.beans.factory.config,
-              				org.springframework.orm.hibernate3,
+              				org.springframework.orm.hibernate4,
               				org.aopalliance.aop,
 							org.springframework.aop,
 							org.springframework.aop.framework,
