--- a/Hub/FlashizISO8583/pom.xml
+++ b/Hub/FlashizISO8583/pom.xml
@@ -53,17 +53,17 @@
 		 <dependency>
       	<groupId>org.springframework</groupId>
       	<artifactId>spring-aop</artifactId>
-      	<version>3.0.5.RELEASE</version>
+      	<version>4.0.5.RELEASE</version>
       </dependency>
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
-		<version>3.3.2.GA</version>
+		<version>4.2.19.Final</version>
 	</dependency>
 	<dependency>
 	  <groupId>org.springframework</groupId>
 	  <artifactId>spring-tx</artifactId>
-	  <version>3.0.5.RELEASE</version>
+	  <version>3.2.12.RELEASE</version>
 	</dependency>
 	</dependencies>
 	<build>
