--- a/MfinoCoreEngine/Frontend/pom.xml
+++ b/MfinoCoreEngine/Frontend/pom.xml
@@ -24,6 +24,11 @@
 			<artifactId>jpos</artifactId>
 			<version>1.8.2</version>
 		</dependency>
+			<dependency>
+			<groupId>de.congrace</groupId>
+			<artifactId>exp4j</artifactId>
+			<version>0.2.9</version>
+		</dependency>
 		<dependency>
 			<groupId>com.mfino.mce</groupId>
 			<artifactId>MCECore</artifactId>
@@ -37,7 +42,7 @@
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
-		<version>3.3.2.GA</version>
+		<version>4.2.19.Final</version>
 	</dependency>
 	</dependencies>
 	<build>
@@ -65,7 +70,7 @@
 							org.apache.activemq.camel.component,
 							org.apache.camel.component.jms,
 							org.osgi.framework,
-							org.springframework.orm.hibernate3,
+							org.springframework.orm.hibernate4,
               				org.aopalliance.aop,
 							org.springframework.aop,
 							org.springframework.aop.framework,
