--- a/MfinoCoreEngine/InterBankService/pom.xml
+++ b/MfinoCoreEngine/InterBankService/pom.xml
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>3.3.2.GA</version>
+			<version>4.2.19.Final</version>
 		</dependency>     
 	    <dependency>
 	      <groupId>org.apache.camel</groupId>
@@ -64,17 +64,17 @@
       <dependency>
       	<groupId>org.springframework</groupId>
       	<artifactId>spring-aop</artifactId>
-      	<version>3.0.5.RELEASE</version>
+      	<version>3.2.12.RELEASE</version>
       </dependency>
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
-		<version>3.3.2.GA</version>
+		<version>4.2.19.Final</version>
 	</dependency>
 	<dependency>
 	  <groupId>org.springframework</groupId>
 	  <artifactId>spring-tx</artifactId>
-	  <version>3.0.5.RELEASE</version>
+	  <version>3.2.12.RELEASE</version>
 	</dependency>				
 	    
 	</dependencies>
@@ -105,7 +105,7 @@
 		              				org.osgi.framework,
 		              				org.springframework.beans.factory.config,
 		              				com.mfino.util.*,
-		              				org.springframework.orm.hibernate3,
+		              				org.springframework.orm.hibernate4,
 		              				org.aopalliance.aop,
 									org.springframework.aop,
 									org.springframework.aop.framework,
