--- a/MfinoCoreEngine/NotificationService/pom.xml
+++ b/MfinoCoreEngine/NotificationService/pom.xml
@@ -47,7 +47,7 @@
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
-		<version>3.3.2.GA</version>
+		<version>4.2.19.Final</version>
 	</dependency>    
   </dependencies>
   <build>
@@ -77,7 +77,7 @@
               				org.osgi.framework,
               				org.hibernate,
               				com.mfino.dao,
-              				org.springframework.orm.hibernate3,
+              				org.springframework.orm.hibernate4,
               				org.aopalliance.aop,
 							org.springframework.aop,
 							org.springframework.aop.framework,
