--- a/Web/TransactionMonitorTool/pom.xml
+++ b/Web/TransactionMonitorTool/pom.xml
@@ -40,6 +40,11 @@
 		    <version>1.8</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.jasypt</groupId>
+		    <artifactId>jasypt-spring3</artifactId>
+		    <version>1.9.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
@@ -86,42 +91,42 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>3.3.2.GA</version>
+			<version>4.2.19.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-c3p0</artifactId>
-			<version>3.3.2.GA</version>
+			<version>4.2.19.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.2.12.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.2.12.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.2.12.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.2.9.RELEASE</version>
 		</dependency>
 		<dependency>
       		<groupId>org.springframework.security</groupId>
       		<artifactId>spring-security-web</artifactId>
-      		<version>3.0.5.RELEASE</version>
+      		<version>3.2.9.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>3.0.5.RELEASE</version>
+			<version>3.2.9.RELEASE</version>
 		</dependency>			
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -131,7 +136,7 @@
 	    <dependency>
 	      	<groupId>org.springframework.security</groupId>
 	      	<artifactId>spring-security-taglibs</artifactId>
-	      	<version>3.0.5.RELEASE</version>
+	      	<version>3.2.9.RELEASE/version>
 	    </dependency>		
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -186,10 +191,10 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.4</version>
 		</dependency>
-		<dependency>
-			<groupId>com.google.code.guice</groupId>
-			<artifactId>guice</artifactId>
-			<version>2.0</version>
+			<dependency>
+		    <groupId>com.google.inject</groupId>
+		    <artifactId>guice</artifactId>
+		    <version>3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
