--- a/Web/TransactionMonitorTool/pom.xml
+++ b/Web/TransactionMonitorTool/pom.xml
@@ -136,7 +136,7 @@
 	    <dependency>
 	      	<groupId>org.springframework.security</groupId>
 	      	<artifactId>spring-security-taglibs</artifactId>
-	      	<version>3.2.9.RELEASE/version>
+	      	<version>3.2.9.RELEASE</version>
 	    </dependency>		
 		<dependency>
 			<groupId>org.aspectj</groupId>
