--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -85,3 +85,4 @@ mfino.ktpserver.base.url=https://localhost:8443/KTPMock/validate
 mfino.ktpserver.server.timeout=10000
 #Use "," to seperate multiple email Ids
 mfino.capitalization.authorized.email=bala.sunku@rand-ind.com
+ktp.image.path=images/id/
