Modified for 1. Upload profile photo. 2. login response to include the profile photo to be displayed in mobile app after successful login. Note: for Uploaded photo we need to restrict the size of the photo on the mobile App side to reduce the data transfer from App to server to APP process.

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -86,3 +86,4 @@ mfino.ktpserver.server.timeout=10000
 #Use "," to seperate multiple email Ids
 mfino.capitalization.authorized.email=bala.sunku@rand-ind.com
 ktp.image.path=images/id/
+mfino.subscriber.profile.image.filepath=/images/profile/
