--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -88,3 +88,4 @@ mfino.capitalization.authorized.email=bala.sunku@rand-ind.com
 mfino.mail.use.smtp=true
 ktp.image.path=/images/id/
 mfino.subscriber.profile.image.filepath=/images/profile/
+code.for.transfer.using.emoney=8222
