Improve on SMP-457
Improve on SMP-457:
1. store uploaded ktp scan to outside tomcat folder.
2. update refresh subscriber details function after approve complete.
3. add new parameter on main.properties for ktp servlet url and prefix
code for DE 103 (cash withdrawals)

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -86,6 +86,10 @@ mfino.ktpserver.server.timeout=10000
 #Use "," to seperate multiple email Ids
 mfino.capitalization.authorized.email=bala.sunku@rand-ind.com
 mfino.mail.use.smtp=true
-ktp.image.path=/images/id/
+#fullpath
+ktp.image.path=/Users/dimo/Simaspay/images/id/
 mfino.subscriber.profile.image.filepath=/images/profile/
 code.for.transfer.using.emoney=8222
+code.for.transfer.recipient.using.emoney=85
+#ktp scan servlet url
+ktp.image.url=/images/ktp/
