Modified for emoney transfer to un registered subscriber.

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -89,7 +89,9 @@ mfino.mail.use.smtp=true
 #fullpath
 ktp.image.path=/Users/dimo/Simaspay/images/id/
 mfino.subscriber.profile.image.filepath=/images/profile/
+mfino.requires.name.when.money.transfer.to.unregistered=false
 code.for.transfer.using.emoney=8222
+#Code for Cash withdrawal using emoney
 code.for.transfer.recipient.using.emoney=85
 #ktp scan servlet url
 ktp.image.url=/images/ktp/
