SMP-488: Transfer: e-Money to UANGKU - MFS

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -90,7 +90,10 @@ mfino.mail.use.smtp=true
 ktp.image.path=/Users/dimo/Simaspay/images/id/
 mfino.subscriber.profile.image.filepath=/images/profile/
 mfino.requires.name.when.money.transfer.to.unregistered=false
+#code for money transfer using emoney
 code.for.transfer.using.emoney=8222
+#Prefix number to be add for transfer to uangku using emoney / Bank
+transfer.to.uangku.prefix.number=8881
 #Code for Cash withdrawal using emoney
 code.for.transfer.recipient.using.emoney=85
 #ktp scan servlet url
