--- a/BSIM/BSIMISO8583/pom.xml
+++ b/BSIM/BSIMISO8583/pom.xml
@@ -42,6 +42,12 @@
 		</dependency>
 		<dependency>
 			<groupId>com.mfino.mce</groupId>
+			<artifactId>Backend</artifactId>
+			<version>0.1-SNAPSHOT</version>
+			<type>bundle</type>
+		</dependency>
+		<dependency>
+			<groupId>com.mfino.mce</groupId>
 			<artifactId>ISODefinitions</artifactId>
 			<version>${project.version}</version>
 		</dependency>
