SMP 507 - add new parameter for SES credentials
aws credentials for send email

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -98,3 +98,7 @@ transfer.to.uangku.prefix.number=8881
 code.for.transfer.recipient.using.emoney=85
 #ktp scan servlet url
 ktp.image.url=/images/ktp/
+#aws credentials for send email
+mfino.mail.transport.protocol=aws
+mfino.mail.aws.user=AKIAIZW252ECC7BIJ5QQ
+mfino.mail.aws.password=p9L+u1zfKmTaYvR7JgOJLHCdfH/IbBhVgPmR0zAC
