--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -102,3 +102,4 @@ ktp.image.url=/images/ktp/
 mfino.mail.transport.protocol=aws
 mfino.mail.aws.user=AKIAIZW252ECC7BIJ5QQ
 mfino.mail.aws.password=p9L+u1zfKmTaYvR7JgOJLHCdfH/IbBhVgPmR0zAC
+mfino.mail.aws.from=noreply@dimo.co.id
