kip image path SMP-457
Change to server path, instead my local folder

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -86,8 +86,8 @@ mfino.ktpserver.server.timeout=10000
 #Use "," to seperate multiple email Ids
 mfino.capitalization.authorized.email=bala.sunku@rand-ind.com
 mfino.mail.use.smtp=true
-#fullpath
-ktp.image.path=/Users/dimo/Simaspay/images/id/
+#ktp fullpath
+ktp.image.path=/opt/images/
 mfino.subscriber.profile.image.filepath=/images/profile/
 mfino.requires.name.when.money.transfer.to.unregistered=false
 #code for money transfer using emoney
