SMP-533 View Favorite List

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -103,3 +103,6 @@ mfino.mail.transport.protocol=aws
 mfino.mail.aws.user=AKIAIZW252ECC7BIJ5QQ
 mfino.mail.aws.password=p9L+u1zfKmTaYvR7JgOJLHCdfH/IbBhVgPmR0zAC
 mfino.mail.aws.from=noreply@dimo.co.id
+#Favorite category details based on transactiontype
+mfino.sub.fav.category.id.name=1,4,5,6,7,10,11,12
+mfino.sub.fav.category.id.billercode=2,3,8,9
