--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -106,3 +106,5 @@ mfino.mail.aws.from=noreply@dimo.co.id
 #Favorite category details based on transactiontype
 mfino.sub.fav.category.id.name=1,4,5,6,7,10,11,12
 mfino.sub.fav.category.id.billercode=2,3,8,9
+# wording ADMIN BANK (response from UMG)
+prefix.wording.for.admin.bank=ADMIN BANK : RP.
