SMP-545 Add Bank Account Pocket for non-KYC Subscriber (for Maker)

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -108,3 +108,5 @@ mfino.sub.fav.category.id.name=1,4,5,6,7,10,11,12
 mfino.sub.fav.category.id.billercode=2,3,8,9
 # wording ADMIN BANK (response from UMG)
 prefix.wording.for.admin.bank=ADMIN BANK : RP.
+#Subscriber Activity 
+sub.activity.active.message=Already an active request is available.
