--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -110,3 +110,5 @@ mfino.sub.fav.category.id.billercode=2,3,8,9
 prefix.wording.for.admin.bank=ADMIN BANK : RP.
 #Subscriber Activity 
 sub.activity.active.message=Already an active request is available.
+# wording TOTAL TAGIHAN (response from UMG)
+prefix.wording.for.total.tagihan=TOTAL TAGIHAN : RP.
