--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -112,3 +112,6 @@ prefix.wording.for.admin.bank=ADMIN BANK : RP.
 sub.activity.active.message=Already an active request is available.
 # wording TOTAL TAGIHAN (response from UMG)
 prefix.wording.for.total.tagihan=TOTAL TAGIHAN : RP.
+
+#configuration in milliseconds
+mfs.mobile.app.timeout=600000
