--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -115,3 +115,17 @@ prefix.wording.for.total.tagihan=TOTAL TAGIHAN : RP.
 
 #configuration in milliseconds
 mfs.mobile.app.timeout=600000
+
+# daily GL Report parameters
+gl.report.omnibus.account=1610900019999
+gl.report.nonkyc.account=1515800019999
+gl.report.kyc.account=1751800019998
+gl.report.debit.currency=IDR
+gl.report.credit.currency=IDR
+gl.report.branch.code=ID0010121
+
+ftp.report.host=repo.dimo.co.id
+ftp.report.port=22
+ftp.report.username=simobi
+ftp.report.password=bsim@2016
+ftp.report.remote.dir.path=/home/simobi/glreport/
