Resolve Simaspay SMS Issue
Add properties for timeout, apply to the configuration.

--- a/Core/settings/bsim/mce.properties
+++ b/Core/settings/bsim/mce.properties
@@ -152,6 +152,7 @@ zenziva.sms.passkey=dimomantabsepanjangmasa
 simaspay.sms.http.url=http://uat.banksinarmas.com/SmsAlert/app/sendSmsPost
 simaspay.sms.systemId=SIMASPAY
 simaspay.sms.msgId=123456
+simaspay.sms.timeout=30000
 
 #Hibernate String Encryptor
 mfino.hibernateStringEncryptor.password=ENC(B9Hekm3iRdP8gIqRCModrw==)
