--- a/GTBank/pom.xml
+++ b/GTBank/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -8,7 +9,13 @@
 		<jaxb-api-version>2.1</jaxb-api-version>
 		<jaxb-impl-version>2.1.13</jaxb-impl-version>
 	</properties>
-
+	<repositories>
+		<repository>
+			<id>nexus</id>
+			<name>Fuse nexus</name>
+			<url>https://repo.fusesource.com/nexus/content/groups/public/</url>
+		</repository>
+	</repositories>
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -23,14 +30,9 @@
 	<url>http://www.mfino.com</url>
 
 	<modules>
-	<module>BillPayments</module>
-<!--		<module>GTISO8583</module>
-		<module>GTConfiguration</module>
-    	<module>GTSMS</module>		
-		<module>InterswitchCashInMock</module>		
-    	
-    	<module>NIBSS</module>
-    	<module>FEPISO8583</module>-->
+		<module>BillPayments</module>
+		<!-- <module>GTISO8583</module> <module>GTConfiguration</module> <module>GTSMS</module> 
+			<module>InterswitchCashInMock</module> <module>NIBSS</module> <module>FEPISO8583</module> -->
 	</modules>
 	<dependencies>
 		<dependency>
