update get registration medium, add otp as mandatory field

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -83,3 +83,4 @@ dateFormatInReportFileNames=yyyyMMdd
 dateFormatInReportQuery=dd-MMM-yy hh:mm:ss.SSS aaa
 #token timeout in minutes
 upgrade.token.timeout.value=10
+mfino.max.wrong.activation.otp=3
